[package]
name = "shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = {version = "0.26.2", features = ["process"]}
openssl = { version = "0.10", features = ["vendored"] }
anyhow = "1.0"
libc = "0.2.139"
rand = "0.8.5"
